@@ -1,3 +1,6 @@
+2013-02-25
+ * introduced messages types - currently only for observation slew/start/end/interruptions
+
 2013-02-23
  * HARD_OFF/SOFT_OFF states becomes part of ONOFF_MASK, not direct status
 
